--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,10 +1,12 @@
 :root {
-  --blue: #273FAD;
-  --green: #3FAD27;
-  --red: 	#ad273f;
+  --ocean:  #2AFADF;
+  --blue: #4C83FF;
+  --green: #59981A;
+  --blue-dark: 	#123597;
   --background: #EBEBEB;
+  --background2: #eeeeeeb2;
   --shapes: #FFFFFF;
-  --text-title: #3D3D4D;
+  --text-title: #3D3D4D; 
   --text: #1C1C29;
   --text-light: #A09CB1;
 }
